# DArrays

./: .gitignore  CMakeLists.txt
include/: DArrays.hpp  darray.hpp  global.hpp  iterators.hpp  mpi.hpp
src/: global.cpp
tests/: CMakeLists.txt
tests/src/: runtests.cpp  test_darray.cpp
